<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <FrameLayout
        android:id="@+id/frame_init"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.roger.screenlocker.utils.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            shimmer:duration="5000">

            <TextView
                android:id="@+id/text_init1"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initSys" />

        </com.roger.screenlocker.utils.ShimmerFrameLayout>

        <RelativeLayout
            android:id="@+id/btn_closesys"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_item_shap"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="fill_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/text_init2"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closeSyslock" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_item_shap"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_init3"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice" />

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice1" />

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice2" />

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice3" />

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice4" />

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice5" />


        </LinearLayout>
    </LinearLayout>

    <com.roger.screenlocker.utils.RippleView
        android:id="@+id/btn_initdone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/finish_init"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/button_item_shap"
        android:gravity="center"
        android:padding="10dp"
        ripple:alphaFactor="0.7"
        ripple:rippleColor="#58FAAC"
        ripple:hover="true" />

</RelativeLayout>

