<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <FrameLayout
        android:id="@+id/frame_init"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_marginTop="130dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.roger.screenlocker.utils.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            shimmer:duration="5000">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/mr_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>

        </com.roger.screenlocker.utils.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/about_linearlayout"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_item_shap"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="fill_parent"
            android:paddingLeft="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/text_init3"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_1" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_2" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_3" />

            <TextView
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_4" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

