<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <FrameLayout
        android:id="@+id/frame_init"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gesture_setting_note"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <com.roger.screenlocker.utils.GestureLockView
            android:id="@+id/gestureLockView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></com.roger.screenlocker.utils.GestureLockView>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:layout_marginLeft="40dp"
                android:id="@+id/btn_gesturereset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gesture_setting_reset"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/button_item_shap_no_corners"
                android:gravity="center"
                android:padding="10dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></FrameLayout>

            <Button
                android:textColor="@color/color_999999"
                android:layout_marginRight="40dp"
                android:id="@+id/btn_gestureset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gesture_setting_set_continue"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/button_item_shap_no_corners"
                android:gravity="center"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>